hw5/all-app-in-one/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kia-billing-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kia-billing-hw5
  template:
    metadata:
      labels:
        app: kia-billing-hw5
    spec:
      containers:
        - name: kia-otus-arch-billing
          image: ilyakozyrev/kia-otus-arch-billing:hw5
          imagePullPolicy: Always
          ports:
            - name: billing-web
              containerPort: 8002
          livenessProbe:
            httpGet:
              port: 8002
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8002
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kia-email-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kia-email-hw5
  template:
    metadata:
      labels:
        app: kia-email-hw5
    spec:
      containers:
        - name: kia-otus-arch-email
          image: ilyakozyrev/kia-otus-arch-email:hw5
          imagePullPolicy: Always
          ports:
            - name: email-web
              containerPort: 8003
          livenessProbe:
            httpGet:
              port: 8003
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8003
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kia-order-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kia-order-hw5
  template:
    metadata:
      labels:
        app: kia-order-hw5
    spec:
      containers:
        - name: kia-otus-arch-order
          image: ilyakozyrev/kia-otus-arch-order:hw5
          imagePullPolicy: Always
          ports:
            - name: order-web
              containerPort: 8004
          livenessProbe:
            httpGet:
              port: 8004
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8004
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
