hw5/all-app-in-one/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kia-billing-service
  labels:
    app: kia-billing-hw5
spec:
  selector:
    app: kia-billing-hw5
  ports:
    - protocol: TCP
      port: 9002
      targetPort: billing-web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: kia-email-service
  labels:
    app: kia-email-hw5
spec:
  selector:
    app: kia-email-hw5
  ports:
    - protocol: TCP
      port: 9003
      targetPort: email-web
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: kia-order-service
  labels:
    app: kia-order-hw5
spec:
  selector:
    app: kia-order-hw5
  ports:
    - protocol: TCP
      port: 9004
      targetPort: order-web
  type: NodePort
